# albert-plugin-homebrew

./: CMakeLists.txt  README.md  metadata.json
i18n/: homebrew_de.ts  homebrew_en.ts
src/: plugin.cpp  plugin.h
